--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yebinyun.github.io/exercise-tracker-app/",
+  "homepage": "https://hanbinchoi.github.io/exercise-test",
   "name": "exercise-tracker-app",
   "version": "0.1.0",
   "private": true,
